--- a/BackEnd/templates/competition.html
+++ b/BackEnd/templates/competition.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 {% extends "base.html" %}
 {% load static %}
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
-    <h1>Hello world</h1>
+    <h1>Help</h1>
 {% endblock %}
