--- a/BackEnd/static/css/style.css
+++ b/BackEnd/static/css/style.css
@@ -1,3 +1,24 @@
 h1{
     color: red;
 }
+
+.header{
+    display: flex;
+    height: 94vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-container{
+    display: flex;
+    background-color: silver;
+    height: 70vh;
+    width: 70vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.form{
+    width: 50%;
+}
