--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -10,32 +10,37 @@
     {% block style %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar bg-primary navbar-expand-lg bg-body-primary">
+    <nav class="navbar bg-primary navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand text-white" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/registration">Registration</a>
+                <a class="nav-link text-white" href="/registration">Registration</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/competition">Competition</a>
+                <a class="nav-link text-white" href="/competition">Competition</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/competitor_registration">Competitor_Registration</a>
+                <a class="nav-link text-white" href="/competitor_registration">Competitor Registration</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/brackets">Brackets</a>
+                <a class="nav-link text-white" href="/brackets">Brackets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/results">Results</a>
+                <a class="nav-link text-white" href="/results">Results</a>
               </li>
+              {% if is_organizer %}
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/create_competition">Create Competition</a>
+              </li>
+              {% endif %}
             </ul>
           </div>
         </div>
