Add additional models and refactor competition form

--- a/BackEnd/templates/create_competition.html
+++ b/BackEnd/templates/create_competition.html
@@ -14,6 +14,17 @@
       <label for="exampleInputEmail1" class="form-label">Date and Time</label>
       {{ form.datetime }}
     <div id="emailHelp" class="form-text">Date and Time format: 2024-12-31 10:55:39</div>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Age</label>
+      {{ form.age }}
+    </div> 
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Belt</label>
+      {{ form.belt }}
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Weight</label>
+      {{ form.weight }}
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
