--- a/BackEnd/static/css/style.css
+++ b/BackEnd/static/css/style.css
@@ -10,7 +10,18 @@ h1{
     align-items: center;
 }
 
+.text{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}
 
+.filter-container{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
 
 .form-container{
     display: flex;
@@ -23,5 +34,6 @@ h1{
 }
 
 .form{
+    display: block;
     width: 50%;
 }
