--- a/BackEnd/templates/registration.html
+++ b/BackEnd/templates/registration.html
@@ -3,15 +3,15 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-
     <div class="form-container">
+        <div class="filter-container">
+        <div class="text">
+        <h4>Filter By</h4>
+        </div>
         
         <form class="form" method="get">
             {% csrf_token %}
             <div class="mb-3">
-            <div>
-              <label for="exampleInputEmail1" class="form-label">Filter by</label>
-            </div>
               <label for="exampleInputEmail1" class="form-label">Age</label>
               {{ form.age }}
               <label for="exampleInputEmail1" class="form-label">Belt</label>
@@ -21,11 +21,29 @@
             </div>
             <button type="submit" class="btn btn-primary">Apply Filter</button>
         </form>
+    </div>
     {% for competitor in object_list %}
     <ul>
     <li>{{ competitor }}</li>
 </ul>
     {% endfor %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
     </div>
 
 </div>
