--- a/BackEnd/static/css/style.css
+++ b/BackEnd/static/css/style.css
@@ -37,3 +37,25 @@ h1{
     display: block;
     width: 50%;
 }
+
+
+.form-with-animation{
+    display: block;
+    width: 100%;
+    max-height: 0;
+    transition: max-height 1.8s;
+    overflow: hidden;
+}
+
+.form-with-animation.open{
+    max-height: 30rem;
+}
+
+@keyframes filter-height {
+    0%{
+        max-height: 0%;
+    }
+    100%{
+        max-height: 100%;
+    }
+}
