--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -42,6 +42,14 @@
               </li>
               {% endif %}
             </ul>
+            <ul class="navbar-nav bg-primary justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/register">Register</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
