--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -42,6 +42,13 @@
               </li>
               {% endif %}
             </ul>
+            {% if user.is_authenticated %}
+            <ul class="navbar-nav bg-primary justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'logout' %}">Logout</a>
+              </li>
+            </ul>
+            {% else %}
             <ul class="navbar-nav bg-primary justify-content-end">
               <li class="nav-item">
                 <a class="nav-link text-white" href="/login">Login</a>
@@ -50,6 +57,7 @@
                 <a class="nav-link text-white" href="/register">Register</a>
               </li>
             </ul>
+            {% endif %}
           </div>
         </div>
       </nav>
