--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -42,6 +42,11 @@
               </li>
               {% endif %}
             </ul>
+            <ul class="navbar-nav bg-primary justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'competitors' %}">Competitors</a>
+              </li>
+            </ul>
             {% if user.is_authenticated %}
             <ul class="navbar-nav bg-primary justify-content-end">
               <li class="nav-item">
