--- a/BackEnd/templates/competitors.html
+++ b/BackEnd/templates/competitors.html
@@ -3,7 +3,7 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-    <div class="form-container">
+    <div class="header-container">
         <h2>Competitors</h2>
     {% for competitor in object_list %}
     
