--- a/BackEnd/templates/register.html
+++ b/BackEnd/templates/register.html
@@ -3,7 +3,7 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-  <div class="form-container">
+  <div class="header-container">
     <form method="post">
       {% csrf_token %}
       <div class="form-group">
