--- a/BackEnd/static/css/style.css
+++ b/BackEnd/static/css/style.css
@@ -1,4 +1,4 @@
-h1{
+h1{ 
     color: red;
 }
 
@@ -23,7 +23,7 @@ h1{
     width: 30%;
 }
 
-.form-container{
+.header-container{
     display: flex;
     flex-direction: column;
     background-color: silver;
@@ -31,13 +31,62 @@ h1{
     width: 70vw;
     justify-content: center;
     align-items: center;
+    position: relative;
+
+}
+
+.form-container{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .form{
     display: block;
     width: 50%;
+    position: absolute; 
+    top: 0;
+    transition: transform 0.75s ease, opacity 0.5s ease; 
+    opacity: 0; 
+    visibility: hidden; 
+    z-index: -1; 
 }
 
+.form-prev {
+    transform: translateX(-100%); 
+    opacity: 0; 
+    visibility: hidden; 
+}
+
+.form-next {
+    transform: translateX(100%); 
+}
+
+.form.active {
+    opacity: 1; 
+    visibility: visible; 
+    transform: translateX(0); 
+    z-index: 1;
+}
+
+.form-grid{
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 2rem; 
+    padding: 20px;
+}
+
+.form-grid-item-5, .form-grid-item-8, .form-grid-item-9{
+    grid-column: 1 / 3;
+}
+
+.form-item{
+    border-width: 1px;
+    border-color: black;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .4);
+}
 
 .form-with-animation{
     display: block;
@@ -58,4 +107,12 @@ h1{
     100%{
         max-height: 100%;
     }
+}
+
+.form-section {
+    display: none;
+}
+
+.form-section.active {
+    display: block;
 }
