--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -7,7 +7,9 @@
     <title>{% block title %} Django Competition {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    {% block style %}{% endblock %}
+    {% block style %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% endblock %}
 </head>
 <body>
     <nav class="navbar bg-primary navbar-expand-lg ">
@@ -24,12 +26,14 @@
               <li class="nav-item">
                 <a class="nav-link text-white" href="/registration">Registration</a>
               </li>
+              {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link text-white" href="/competition">Competition</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/competitor_registration">Competitor Registration</a>
               </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link text-white" href="/brackets">Brackets</a>
               </li>
@@ -43,6 +47,7 @@
               {% endif %}
             </ul>
             <ul class="navbar-nav bg-primary justify-content-end">
+              
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'competitors' %}">Competitors</a>
               </li>
@@ -50,7 +55,10 @@
             {% if user.is_authenticated %}
             <ul class="navbar-nav bg-primary justify-content-end">
               <li class="nav-item">
-                <a class="nav-link text-white" href="{% url 'logout' %}">Logout</a>
+                <form method="post" action="{% url 'logout'%}">
+                  {% csrf_token %}
+                <button type="submit" class="nav-link text-white">Logout</button>
+                </form>
               </li>
             </ul>
             {% else %}
