--- a/BackEnd/templates/create_competition.html
+++ b/BackEnd/templates/create_competition.html
@@ -3,8 +3,8 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-<div class="form-container">
-<form class="form" method="post">
+<div class="header-container">
+<form class="form active" method="post">
     {% csrf_token %}
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Name</label>
