--- a/BackEnd/templates/registration.html
+++ b/BackEnd/templates/registration.html
@@ -3,12 +3,12 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-    <div class="form-container">
+    <div class="header-container">
         <div class="filter-container">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton">
                Filter by
               </button>
-        <form class="form-with-animation" method="get">
+        <form class="form-with-animation active" method="get">
             {% csrf_token %}
               <label for="exampleInputEmail1" class="form-label">Age</label>
               {{ form.age }}
