Modify competition view to display all competitions

--- a/BackEnd/templates/base.html
+++ b/BackEnd/templates/base.html
@@ -28,7 +28,7 @@
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link text-white" href="/competition">Competition</a>
+                <a class="nav-link text-white" href="/competitions">Competitions</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/competitor_registration">Competitor Registration</a>
