--- a/BackEnd/templates/competition.html
+++ b/BackEnd/templates/competition.html
@@ -2,5 +2,34 @@
 {% load static %}
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
-    <h1>Help</h1>
+<div class="header">
+    <div class="header-container">
+        <h2>Competitors</h2>
+    {% for competitor in object_list %}
+    
+    <ul>
+        <li>{{ competitor }}</li>
+    </ul>
+    
+    {% endfor %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+    </div>
+</div>
+</div>
 {% endblock %}
