--- a/BackEnd/templates/login.html
+++ b/BackEnd/templates/login.html
@@ -14,6 +14,9 @@
           <label for="exampleInputPassword1">Password</label>
           {{ form.password }}
         </div>
+        <div class="form-group">
+          {{ form.captcha }}
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
