--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -9,19 +9,19 @@
 </head>
 <body>
   <div class="form-container">
-  <form>
+  <form method="post">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      {{ form.email(class_="form-control") }}
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
-      <input type="text" class="form-control" id="username">
+      {{ form.username(class_="form-control")  }}
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+      {{ form.password(class_="form-control")  }}
     </div>
     <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
