--- a/BackEnd/templates/flask_files.html
+++ b/BackEnd/templates/flask_files.html
@@ -3,33 +3,13 @@
 {% block style %}<link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock %}
 {% block body %}
 <div class="header">
-  <div class="header-container">
-      <h2>Files</h2>
-  {% for file in object_list %}
-  
-  <ul>
-      <li>{{ file }}</li>
-  </ul>
-  
-  {% endfor %}
-  <div class="pagination">
-      <span class="step-links">
-          {% if page_obj.has_previous %}
-              <a href="?page=1">&laquo; first</a>
-              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-          {% endif %}
-  
-          <span class="current">
-              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-          </span>
-  
-          {% if page_obj.has_next %}
-              <a href="?page={{ page_obj.next_page_number }}">next</a>
-              <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-          {% endif %}
-      </span>
-  </div>
-  </div>
-</div>
+    <div class="header-container">
+        {% if file %}
+        <h1>{{ file }}</h1>
+        {% endif %}
+        {% if content %}
+        <p> {{ content }}</p>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
